--- a/signuppage.html
+++ b/signuppage.html
@@ -17,26 +17,26 @@
 </head>
 <body id="box">
     
-    <h1>Sign Up Page</h1>
-    Name:<input type="text" placeholder="name">
+        <h1>Sign Up Page</h1>
+        Name:<input type="text" placeholder="name" id="name">
         <br>
         <br>
-        E-Mail:<input type="text" placeholder="email">
+        E-Mail:<input type="text" placeholder="email" id="email">
         <br>
         <br>
-        Password:<input type="password" placeholder="password">
+        Password:<input type="password" placeholder="password" id="pass">
         <br>
         <br>
-        Confirm Password:<input type="password" placeholder="Re-enter Password">
+        Confirm Password:<input type="password" placeholder="Re-enter Password" id="repass">
         <br>
         <br>
-    <button type="button">Submit</button>
+    <button type="button" onClick="Submit()">Submit</button>
 
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.js"></script>
-    <script src="front.js"></script>
+    <script src="signup.js"></script>
     
 </body>
 </html>
