--- a/front.html
+++ b/front.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        function check(){
+             var userob= localStorage.getItem('userObject');
+          if(userob==null || userob==''){
+            window.location="/";
+            return false;
+          }
+        }
+     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact List</title>
 </head>
 
-<body  onLoad="contactList()">
+<body  onLoad="check();contactList()">
 
 
     <div>
         Name: <input type="text"  id="name">
-        Email: <input type="text"  id="mail">
+        Email: <input type="text"  id="email">
          
        Mobile No.:<input type="text"  id="number">
-         <button type="button" onClick="add()">Add</button>
-<br>
-<br>
+       <button type="button" onclick="add()">Add</button> 
+        <a href="/profile">Profile</a>
+
+       <br>
+       <a onclick="logout()">Logout</a>
+       <br>
 <br>
 <br>
 
@@ -56,6 +68,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.js"></script>
 <script src="front.js"></script>
+<script src="logout.js"></script>
 
 </body>  
 </html>
